Almost working except api reverse proxy